--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.6",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-dotenv": "^3.4.8",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-normalize": "^1.0.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "yup": "^1.1.1"
   },
