--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
