--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
