--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.6",
+    "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "expo": "~48.0.11",
+    "expo-file-system": "~15.2.2",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
