--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~48.0.11",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "^14.1.1",
+    "expo-in-app-purchases": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "react": "18.2.0",
@@ -29,10 +30,12 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-glassfy-module": "^1.3.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-normalize": "^1.0.1",
     "react-native-pager-view": "6.1.2",
+    "react-native-purchases": "^5.14.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
