--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -36,8 +37,10 @@
     "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-normalize": "^1.0.1",
     "react-native-pager-view": "6.1.2",
-    "react-native-purchases": "^5.14.0",
+    "react-native-purchases": "^5.15.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.6",
