--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
         "WRITE_EXTERNAL_STORAGE"
       ],
       "jsEngine": "jsc",
-      "package": "com.ios.reken"
+      "package": "com.reken.android"
     },
     "web": {
       "favicon": "./assets/favicon.png"
